--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PairrProgramming</title>
+  <title>Pairr</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<%#= render partial: 'layouts/nav' %>
+
+<%= render partial: 'layouts/flash' %>
+
+<div class="content">
+  <%= yield %>
+</div>
 
 </body>
 </html>
