Mother-F*** github provider... FINALLY able to log in and out correctly

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container-fluid container-home">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
+  <!--<div class="col-md-2"></div>-->
+  <div class="col-md-12">
     <h1 class="home">Welcome to Pairr </h1>
     <h2 class="home"> Tinder for Programming!</h2>
     <h3 class="home">Finding a perfect programming pair is hard.</h3>
@@ -16,5 +16,5 @@
     <% end %>
 
   </div>
-  <div class="col-md-2"></div>
+  <!--<div class="col-md-2"></div>-->
 </div>
