Integrated has_friendship gem. Able to display all potential matches

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,7 +1,14 @@
 <h1> Potential Pairs </h1>
 
-<li>
-  <% @matches.each do |match| %>
-    <%= match. %>
-  <% end %>
-</li>
+  <%# @matches.each do |match| %>
+    <img src="<%= @match.image_url %>" >
+    <%= @match.github_name %>
+
+<%# end %>
+
+<%= link_to "Approve",  %>
+
+<br>
+<br>
+
+<%= link_to "Reject" %>
