show random on each page

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -41,3 +41,5 @@
 </ul>
 
 <h3>Total Friends liked <%= current_user.pending_friends.count %></h3>
+
+<h3>Total Friends rejected <%= current_user.rejecteds.count %></h3>
