Styling of dashboard page

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,45 +1,99 @@
 
-<header class="navigation" role="banner">
-  <%#= link_to 'Music Story', root_path, class: 'logo' %>
-  <!--<a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>-->
-  <div class="navigation-tools">
-    <ul>
-      <li class="nav-link"></li>
-      <% if current_user %>
-        <li class="nav-link"><%= link_to 'Profile', dashboard_path %></li>
-        <li class="nav-link"><%= link_to 'Logout', logout_path %></li>
-      <% else %>
-        <li class="nav-link">
-          <%= link_to 'Login with Github', login_path %>
-        </li>
-      <% end %>
-    </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Pairr Programming</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <% if current_user %>
+          <li><%= link_to 'Profile', dashboard_path %></li>
+          <li><%= link_to 'Logout', logout_path %></li>
+        <% else %>
+          <li><%= link_to 'Login with Github', login_path %></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
-  <!--</div>-->
-</header>
+</nav>
+
+<br>
+<br>
+<br>
+
+<div class="container">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header"><%= @user.github_name %>
+        <small>Item Subheading</small>
+      </h1>
+    </div>
+  </div>
 
 
-<h1>Dashboard View!</h1>
+  <div class="row">
 
-<h2> Hello, <%= @user.github_name %></h2>
+    <div class="col-md-5">
+      <img class="img-responsive" src="<%= current_user.image_url %>" alt="">
+    </div>
 
-<%#= @user.languages.map do |lang| %>
-  <%#= lang.name %>
-<%# end %>
+    <div class="col-md-7">
+      <h3>About Me</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
 
-<!--<a href="/users/<%#= "#{current_user.id}" %>/friendships">Find Pairs</a>-->
-<%= link_to "Find Pairs", user_friendships_path(current_user), id: "find-pairs-button"%>
-<!--<div id="find-pairs-button">-->
-  <!--<a href="<%#= user_friendships_path(current_user) %>" >Find Pairs</a>-->
-<!--</div>-->
+      <h3>Preferred Languages</h3>
+      <ul>
+        <li>Lorem Ipsum</li>
+        <li>Dolor Sit Amet</li>
+        <li>Consectetur</li>
+        <li>Adipiscing Elit</li>
+      </ul>
 
-<h2>Friends <%= current_user.friends.count %></h2>
-<ul>
-  <% current_user.friends.each do |friend| %>
-    <li><%= friend.github_name %></li>
-  <% end %>
-</ul>
+      <br>
+      <%= link_to "Find Pairs", user_friendships_path(current_user), id: "find-pairs-button"%>
+    </div>
 
-<h3>Total Friends liked <%= current_user.pending_friends.count %></h3>
+  </div>
 
-<h3>Total Friends rejected <%= current_user.rejecteds.count %></h3>
+
+
+
+
+  <h3>Total Friends liked <%= current_user.pending_friends.count %></h3>
+
+  <h3>Total Friends rejected <%= current_user.rejecteds.count %></h3>
+
+
+
+
+  <div class="row">
+
+    <div class="col-lg-12">
+      <h3 class="page-header">Completed Matches: <%= current_user.friends.count %></h3>
+    </div>
+
+    <% current_user.friends.each do |friend| %>
+
+      <div class="col-sm-2 col-xs-6">
+        <!--<a class="img-responsive portfolio-item" href="#">-->
+          <img class="img-responsive portfolio-item" src="<%= friend.image_url %>" alt="" >
+          <%= friend.github_name %>
+        <!--</a>-->
+      </div>
+
+    <% end %>
+  </div>
+
+  <hr>
+
+  <footer>
+    <div class="row">
+      <div class="col-lg-12">
+        <p>Copyright © whithub 2015</p>
+      </div>
+    </div>
+  </footer>
+
+</div>
