--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the Dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+img.img-responsive {
+  height: 400px;
+  width: 400px;
+//  margin-left: auto;
+//  margin-right: auto;
+}
+
+img.img-responsive.portfolio-item {
+  height: 150px;
+  width: 150px;
+}
+
+//a.img-responsive.portfolio-item {
+//  text-align: center;
+//}
+
+.col-sm-2.col-xs-6 {
+  text-align: center;
+}
+
+
+footer {
+  text-align: center;
+}
