--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -11,6 +11,10 @@ img.img-responsive {
 //  margin-right: auto;
 }
 
+a.btn.btn-default {
+  margin: 8% 0 0 30%;
+}
+
 img.img-responsive.portfolio-item {
   height: 150px;
   width: 150px;
