--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -40,19 +40,23 @@
     </div>
 
     <div class="col-md-7">
+
       <h3>About Me</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+      <% if current_user.about_me != "" %>
+        <p><%= current_user.about_me %></p>
+      <% else %>
+        <p> You're 80% more likely to get matched if you put a little something about yourself... </p>
+      <% end %>
 
       <h3>Preferred Languages</h3>
       <ul>
-        <li>Lorem Ipsum</li>
-        <li>Dolor Sit Amet</li>
-        <li>Consectetur</li>
-        <li>Adipiscing Elit</li>
+        <% current_user.languages.map do |language| %>
+          <li><%= language.name %></li>
+        <% end %>
       </ul>
 
       <br>
-      <%= link_to "Find Pairs", user_friendships_path(current_user), id: "find-pairs-button"%>
+      <%= link_to "Find Pairs", user_friendships_path(current_user), class: "btn btn-default" %>
     </div>
 
   </div>
@@ -86,12 +90,14 @@
     <% end %>
   </div>
 
+  <br>
+  <br>
   <hr>
 
   <footer>
     <div class="row">
       <div class="col-lg-12">
-        <p>Copyright © whithub 2015</p>
+        <p>© whithub 2015</p>
       </div>
     </div>
   </footer>
