Styling potential pairs page

--- a/app/assets/stylesheets/friendships.scss
+++ b/app/assets/stylesheets/friendships.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Matches controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.potential-pairs-heading {
+  text-align: center;
+}
+
+
+.col-md-7 .col-sm-7.col-xs-6 {
+  margin: 8% 0 0 25%;
+}
+
+.col-md-7 .col-sm-7.col-xs-6 a {
+  margin-right: 20%;
+}
