--- a/app/views/Friendships/index.html.erb
+++ b/app/views/Friendships/index.html.erb
@@ -1,21 +1,100 @@
-<h1> Potential Pairs </h1>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand">Pairr Programming</a>
+    </div>
 
-<% @matches.each do |match| %>
-<img src="<%= match.image_url %>" >
-<%= match.github_name %><br>
-  <%= match.about_me %><br>
-  <% match.languages.map do |language| %>
-    <li><%= language.name %></li>
-  <% end %>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <% if current_user %>
+          <li><%= link_to 'Profile', dashboard_path %></li>
+          <li><%= link_to 'Logout', logout_path %></li>
+        <% else %>
+          <li><%= link_to 'Login with Github', login_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <br>
 <br>
-
-<%= link_to "Approve", user_friendship_approve_path(current_user, match), method: :post %>
-
-<br>
 <br>
 
-<%= link_to "Reject", user_friendship_reject_path(current_user, match), method: :post %>
-<hr/>
-<% end %>
+<div class="container">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="potential-pairs-heading">Potential Pairs</h1>
+    </div>
+  </div>
+
+
+  <% @matches.each do |match| %>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header"><%= match.github_name %>
+        <small>Item Subheading</small>
+      </h1>
+    </div>
+  </div>
+
+
+  <div class="row">
+
+    <div class="col-md-5">
+      <img class="img-responsive" src="<%= match.image_url %>" alt="">
+    </div>
+
+    <div class="col-md-7">
+
+      <h3>About Me</h3>
+      <% if match.about_me != "" %>
+        <p><%= match.about_me %></p>
+      <% else %>
+        <p> They don't have anything in their About Me... boring. </p>
+      <% end %>
+
+      <h3>Preferred Languages</h3>
+      <ul>
+        <% match.languages.map do |language| %>
+
+          <div class="col-sm-6 col-xs-6">
+            <li><%= language.name %></li>
+          </div>
+        <% end %>
+      </ul>
+
+      <br>
+      <br>
+      <br>
+
+      <div class="col-sm-7 col-xs-6">
+        <%= link_to "Approve", user_friendship_approve_path(current_user, match), method: :post, class: "btn btn-success" %>
+        <%= link_to "Reject", user_friendship_reject_path(current_user, match), method: :post, class: "btn btn-warning" %>
+      </div>
+
+      <hr/>
+
+    <% end %>
+
+
+      <br>
+    </div>
+
+  </div>
+
+  <br>
+  <br>
+  <hr>
+
+  <footer>
+    <div class="row">
+      <div class="col-lg-12">
+        <p>© whithub 2015</p>
+      </div>
+    </div>
+  </footer>
+
+</div>
