Home page styled - complete

--- a/app/assets/stylesheets/friendships.scss
+++ b/app/assets/stylesheets/friendships.scss
@@ -15,3 +15,21 @@
 .col-md-7 .col-sm-7.col-xs-6 a {
   margin-right: 20%;
 }
+
+
+.match-reject {
+  margin-top: 15%;
+  margin-left: 10%;
+  margin-right: -10%;
+}
+
+.match-image img.img-responsive{
+  margin: 0 0 0 20%;
+  border-radius: 3%;
+}
+
+.match-approve {
+  margin-top: 15%;
+  margin-left: -5%;
+  margin-right: 5%;
+}
