--- a/app/views/Friendships/index.html.erb
+++ b/app/views/Friendships/index.html.erb
@@ -35,7 +35,6 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header"><%= match.github_name %>
-        <small>Item Subheading</small>
       </h1>
     </div>
   </div>
@@ -43,11 +42,23 @@
 
   <div class="row">
 
-    <div class="col-md-5">
+    <div class="col-md-2 match-reject">
+      <%= link_to "Reject", user_friendship_reject_path(current_user, match), method: :post, class: "btn btn-warning" %>
+    </div>
+
+    <div class="col-md-8 match-image">
       <img class="img-responsive" src="<%= match.image_url %>" alt="">
     </div>
 
-    <div class="col-md-7">
+    <div class="col-md-2 match-approve">
+      <%= link_to "Approve", user_friendship_approve_path(current_user, match), method: :post, class: "btn btn-success" %>
+    </div>
+
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-12">
 
       <h3>About Me</h3>
       <% if match.about_me != "" %>
@@ -69,20 +80,10 @@
       <br>
       <br>
       <br>
-
-      <div class="col-sm-7 col-xs-6">
-        <%= link_to "Approve", user_friendship_approve_path(current_user, match), method: :post, class: "btn btn-success" %>
-        <%= link_to "Reject", user_friendship_reject_path(current_user, match), method: :post, class: "btn btn-warning" %>
-      </div>
-
       <hr/>
 
     <% end %>
-
-
-      <br>
     </div>
-
   </div>
 
   <br>
