Basic styling done for account setup page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//#account-setup-container {
+//  min-height: 1000px;
+//}
+
+.checkbox_container input {
+  display: inline;
+  margin-left: 10%;
+}
+
+
+.about-me-text-input {
+  text-align: center;
+  margin-left: 2%;
+}
+
+.lets-get-pairing-button {
+  margin-left: 44.5%
+}
