--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -26,7 +26,7 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header"><%= @user.github_name %>
+      <h1 class="page-header"><%= current_user.github_name %>
       </h1>
     </div>
   </div>
