Uh oh... issues with merging...

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,11 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+.flash {
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  background-color: #60BFBF;
+}
