--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,7 @@
 
 .container-home {
 //  background-color: #1B3C59;
-  background-image: url("desktop_3.jpg");
+  background-image: image-url("desktop_3.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
